; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-tasks.c_get_current_task.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-tasks.c_get_current_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_current_task() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @get_self_id()
  %3 = call i32 @get_entry_number(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  br label %9

7:                                                ; preds = %0
  %8 = load i32, i32* %1, align 4
  br label %9

9:                                                ; preds = %7, %6
  %10 = phi i32 [ -1, %6 ], [ %8, %7 ]
  ret i32 %10
}

declare dso_local i32 @get_entry_number(i32) #1

declare dso_local i32 @get_self_id(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
